--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 249,
    "id": "4e44a2f2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 250,
+   "id": "9f6833e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import Enum\n",
+    "\n",
+    "class Col_name(Enum):\n",
+    "    PCLASS = \"pclass\"\n",
+    "    SURVIVED = \"survived\"\n",
+    "    NAME = \"name\"\n",
+    "    SEX = \"sex\"\n",
+    "    AGE = \"age\"\n",
+    "    SIBSP = \"sibsp\"\n",
+    "    PARCH = \"parch\"\n",
+    "    TICKET = \"ticket\"\n",
+    "    FARE = \"fare\"\n",
+    "    CABIN = \"cabin\"\n",
+    "    EMBARKED = \"embarked\"\n",
+    "    BOAT = \"boat\"\n",
+    "    BODY = \"body\"\n",
+    "    HOME_DEST = \"home.dest\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
    "id": "06fbc74d",
    "metadata": {},
    "outputs": [
@@ -48,6 +74,260 @@
     "path = Path('./')\n",
     "df = pd.read_csv(path/'titanic.csv')\n",
     "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "f952aad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_column(df, c: Col_name):\n",
+    "    return df[c.value]\n",
+    "\n",
+    "\n",
+    "def clean_numeric_inplace(df, col: str):\n",
+    "    df.loc[:, col] = pd.to_numeric(df[col], errors=\"coerce\")  # non-numeric -> NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "a06ab01a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before cleaning:\n",
+      "0    ?\n",
+      "1    ?\n",
+      "Name: body, dtype: object\n",
+      "\n",
+      "After cleaning:\n",
+      "0    NaN\n",
+      "1    NaN\n",
+      "Name: body, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "body = get_column(df, Col_name.BODY)\n",
+    "\n",
+    "print(\"Before cleaning:\")\n",
+    "print(df[Col_name.BODY.value].head()[:2])\n",
+    "\n",
+    "clean_numeric_inplace(df, Col_name.BODY.value)\n",
+    "print(\"\\nAfter cleaning:\")\n",
+    "print(df[Col_name.BODY.value].head()[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "b1cf6cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before cleaning AGE:\n",
+      "age\n",
+      "?     263\n",
+      "24     47\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "After cleaning AGE:\n",
+      "age\n",
+      "24.0    47\n",
+      "22.0    43\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clean_numeric_inplace(df, Col_name.AGE.value)\n",
+    "count = df[Col_name.AGE.value].value_counts()\n",
+    "print(\"Before cleaning AGE:\")\n",
+    "print(count.head()[:2])\n",
+    "\n",
+    "clean_numeric_inplace(df, Col_name.AGE.value)\n",
+    "count = df[Col_name.AGE.value].value_counts()\n",
+    "print(\"\\nAfter cleaning AGE:\")\n",
+    "print(count.head()[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "e6876b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Survived counts:\n",
+      "survived\n",
+      "0    809\n",
+      "1    500\n",
+      "Name: count, dtype: int64\n",
+      "------------\n",
+      "\n",
+      "Sex counts:\n",
+      "sex\n",
+      "male      843\n",
+      "female    466\n",
+      "Name: count, dtype: int64\n",
+      "------------\n",
+      "\n",
+      "Pclass counts:\n",
+      "pclass\n",
+      "3    709\n",
+      "1    323\n",
+      "2    277\n",
+      "Name: count, dtype: int64\n",
+      "------------\n",
+      "\n",
+      "Fare stats:\n",
+      "count     1309\n",
+      "unique     282\n",
+      "top       8.05\n",
+      "freq        60\n",
+      "Name: fare, dtype: object\n",
+      "------------\n",
+      "\n",
+      "Cabin stats:\n",
+      "cabin\n",
+      "?                  1014\n",
+      "C23 C25 C27           6\n",
+      "B57 B59 B63 B66       5\n",
+      "G6                    5\n",
+      "D                     4\n",
+      "                   ... \n",
+      "F E46                 1\n",
+      "F E57                 1\n",
+      "F E69                 1\n",
+      "E10                   1\n",
+      "F38                   1\n",
+      "Name: count, Length: 187, dtype: int64\n",
+      "------------\n",
+      "\n",
+      "Embarked stats:\n",
+      "embarked\n",
+      "S    914\n",
+      "C    270\n",
+      "Q    123\n",
+      "?      2\n",
+      "Name: count, dtype: int64\n",
+      "------------\n",
+      "\n",
+      "Boat stats:\n",
+      "boat\n",
+      "?          823\n",
+      "13          39\n",
+      "C           38\n",
+      "15          37\n",
+      "14          33\n",
+      "4           31\n",
+      "10          29\n",
+      "5           27\n",
+      "3           26\n",
+      "9           25\n",
+      "11          25\n",
+      "8           23\n",
+      "16          23\n",
+      "7           23\n",
+      "D           20\n",
+      "6           20\n",
+      "12          19\n",
+      "2           13\n",
+      "A           11\n",
+      "B            9\n",
+      "1            5\n",
+      "13 15        2\n",
+      "5 7          2\n",
+      "C D          2\n",
+      "5 9          1\n",
+      "8 10         1\n",
+      "13 15 B      1\n",
+      "15 16        1\n",
+      "Name: count, dtype: int64\n",
+      "------------\n",
+      "\n",
+      "Home.dest stats:\n",
+      "home.dest\n",
+      "?                                 564\n",
+      "New York, NY                       64\n",
+      "London                             14\n",
+      "Montreal, PQ                       10\n",
+      "Cornwall / Akron, OH                9\n",
+      "                                 ... \n",
+      "Union Hill, NJ                      1\n",
+      "London New York, NY                 1\n",
+      "Austria Niagara Falls, NY           1\n",
+      "Oslo, Norway Cameron, WI            1\n",
+      "Antwerp, Belgium / Stanton, OH      1\n",
+      "Name: count, Length: 370, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_numeric_inplace(df, Col_name.SURVIVED.value)\n",
+    "count = df[Col_name.SURVIVED.value].value_counts()\n",
+    "print(\"\\nSurvived counts:\")\n",
+    "print(count)\n",
+    "\n",
+    "print(\"------------\")\n",
+    "\n",
+    "count = df[Col_name.SEX.value].value_counts()\n",
+    "print(\"\\nSex counts:\")\n",
+    "print(count)\n",
+    "\n",
+    "print(\"------------\")\n",
+    "\n",
+    "print(\"\\nPclass counts:\")\n",
+    "count = df[Col_name.PCLASS.value].value_counts()\n",
+    "print(count)\n",
+    "\n",
+    "print(\"------------\")\n",
+    "\n",
+    "fare = get_column(df, Col_name.FARE)\n",
+    "print(\"\\nFare stats:\")\n",
+    "print(fare.describe())\n",
+    "\n",
+    "\n",
+    "print(\"------------\")\n",
+    "\n",
+    "cabin = get_column(df, Col_name.CABIN)\n",
+    "count = df[Col_name.CABIN.value].value_counts()\n",
+    "print(\"\\nCabin stats:\") # Mycket ?\n",
+    "print(count)\n",
+    "\n",
+    "\n",
+    "print(\"------------\")\n",
+    "\n",
+    "embarked = get_column(df, Col_name.EMBARKED)\n",
+    "count = df[Col_name.EMBARKED.value].value_counts()\n",
+    "print(\"\\nEmbarked stats:\") # 2 ?\n",
+    "print(count)\n",
+    "\n",
+    "print(\"------------\")\n",
+    "boat = get_column(df, Col_name.BOAT)\n",
+    "count = df[Col_name.BOAT.value].value_counts()\n",
+    "print(\"\\nBoat stats:\") # Many ?\n",
+    "print(count)\n",
+    "\n",
+    "print(\"------------\")\n",
+    "home_dest = get_column(df, Col_name.HOME_DEST)\n",
+    "count = df[Col_name.HOME_DEST.value].value_counts()\n",
+    "print(\"\\nHome.dest stats:\") # Many ?\n",
+    "print(count)\n",
+    "\n"
    ]
   }
  ],
